--- a/lucernario.html
+++ b/lucernario.html
@@ -6,13 +6,13 @@
     <title>Lucernario Cineclub</title>
 
     <!-- SEO básico -->
-    <meta name="description" content="Lucernario Cineclub: Cine, cultura y comunidad. Publicación de revistas, muestras de cortometrajes y más.">
+    <meta name="description" content="Lucernario Cineclub: Cine colombiano, cultura y comunidad.">
     <meta name="keywords" content="cine, cineclub, cortometrajes, cultura, Lucernario, revista de cine, Dimekia">
     <meta name="author" content="Dimekia Audiovisual">
 
     <!-- Open Graph (Facebook, WhatsApp, LinkedIn, etc.) -->
     <meta property="og:title" content="Lucernario Cineclub">
-    <meta property="og:description" content="Cine, cultura y comunidad. Publicación de revistas, muestras de cortometrajes y más.">
+    <meta property="og:description" content="Cine colombiano, cultura y comunidad.">
     <meta property="og:image" content="https://contraespacios.org/lucernario/png/thumb.png?v=3">
     <meta property="og:url" content="https://contraespacios.org/lucernario/lucernario.html">
     <meta property="og:type" content="website">
@@ -22,7 +22,7 @@
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Lucernario Cineclub">
-    <meta name="twitter:description" content="Cine, cultura y comunidad. Publicación de revistas, muestras de cortometrajes y más.">
+    <meta name="twitter:description" content="Cine colombiano, cultura y comunidad.">
     <meta name="twitter:image" content="https://contraespacios.org/lucernario/png/thumb.png">
 
     <!-- Favicon -->
@@ -324,4 +324,5 @@
     <script src="js/modal.js"></script>
     <script src="js/carga.js"></script>
 </body>
+
 </html>
